[DevTools] Clear local storage

Add a Clear pop-up menu item and toolbar button to the local storage UI.

BUG=681054

Review-Url: https://codereview.chromium.org/2632553002
Cr-Original-Commit-Position: refs/heads/master@{#445222}
Cr-Mirrored-From: https://chromium.googlesource.com/chromium/src
Cr-Mirrored-Commit: 7f604c4d2d191d8b4f1ccbb15b69e4a3ff2e5a58